Fix tooltip sometimes not showing issue

--- a/src/components/recommender-view/recommender-view.css
+++ b/src/components/recommender-view/recommender-view.css
@@ -405,13 +405,17 @@ button {
   transform: scale(1);
   transform-origin: right center;
   transition:
-    opacity 150ms,
-    transform 150ms;
+    opacity 150ms linear,
+    transform 150ms linear;
 
   &.hidden {
     opacity: 0;
-    transform: scale(0.8);
     pointer-events: none;
+    transform: scale(0.8);
+  }
+
+  &.no-show {
+    display: none;
   }
 
   .popper-content {
